# hikarunogomoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yml  pbrain-alex  pbrain-baseValues  pbrain-frouzins_2  pbrain-player1  stats.txt
.github/workflows/: compile.yml  mirror.yml  test-perf.yml
bonus/bin-external/: liskvork  pbrain-gomoku-ai-alexandre-l  pbrain-gomoku-ai-chempa  pbrain-gomoku-ai-noxyt  pbrain-gomoku-ai-uwu  pbrain-gomoku-ai-yapadespoir
liskvork-master 2/: CPackConfig.cmake  CPackSourceConfig.cmake  config.yml
patterns/: diag-1-downblocked20.txt  diag-1-upblocked20.txt  diag-3-20.txt  diag-win-left20.txt  diag-win-right20.txt  diagleft-1-openEnds20.txt  diagleft-3-20.txt  diagnoal1-2-next-20.txt  diagnoal1-2-next-empty-1-20.txt  diagnoal1-2-next-empty-1b-20.txt  diagnoal1-2-next-empty-2-20.txt  diagnoal1-3-next-20.txt  diagnoal1-3-next-empty-1-20.txt  diagnoal1-3-next-empty-1b-20.txt  diagnoal1-3-next-empty-2-20.txt  diagnoal1-4-next-20.txt  diagnoal1-4-next-empty-1-20.txt  diagnoal1-4-next-empty-1b-20.txt  diagnoal1-4-next-empty-2-20.txt  diagnoal2-2-next-20.txt  diagnoal2-2-next-empty-1-20.txt  diagnoal2-2-next-empty-1b-20.txt  diagnoal2-2-next-empty-2-20.txt  diagnoal2-3-next-20.txt  diagnoal2-3-next-empty-1-20.txt  diagnoal2-3-next-empty-1b-20.txt  diagnoal2-3-next-empty-2-20.txt  diagnoal2-4-next-20.txt  diagnoal2-4-next-empty-1-20.txt  diagnoal2-4-next-empty-1b-20.txt  diagnoal2-4-next-empty-2-20.txt  diagnoalA-win-1-20.txt  diagnoalA-win-1b-20.txt  diagnoalA-win-2-20.txt  diagnoalA-win-20.txt  diagnoalA-win-2b-20.txt  diagnoalA-win-2c-20.txt  diagnoalB-win-1-20.txt  diagnoalB-win-1b-20.txt  diagnoalB-win-2-20.txt  (+59 more)
src/: CMakeLists.txt  main.cpp
src/400Bits/: Bits.cpp  Bits.hpp  CMakeLists.txt
src/Board/: CMakeLists.txt  GomukuBoard.cpp  GomukuBoard.hpp
src/IA/: CMakeLists.txt  GomukuIA.cpp  GomukuIA.hpp  PatterMatcher.cpp  PatterMatcher.hpp  ThreadPool.cpp  ThreadPool.hpp
src/Patterns/: CMakeLists.txt
src/Perfcounter/: CMakeLists.txt  Perfcounter.cpp  Perfcounter.hpp
src/Protocol/: CMakeLists.txt  Protocol.cpp  Protocol.hpp  ProtocolWrapper.cpp  ProtocolWrapper.hpp
tools/pattern-gui/: main.py
tools/test-external/: README.md  test-uwu-group.sh
tools/test-perf/: test.sh
tools/transpattern/: CMakeLists.txt
tools/transpattern/src/: CMakeLists.txt  Pattern.hpp  main.cpp
